chore: add umami tracker

--- a/src/app.html
+++ b/src/app.html
@@ -4,6 +4,11 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%sveltekit.assets%/me.icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      defer
+      src="https://umami.blankparticle.workers.dev/script.js"
+      data-website-id="4f9f2dac-4bff-4e3f-b2a2-478e71780049"
+    ></script>
     %sveltekit.head%
   </head>
   <body data-sveltekit-preload-data="hover">
